correct text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   color: black;
   font-weight: bold;
   margin-top: 4px;
- 
-  
+
 }
 
 .line {
@@ -126,11 +125,10 @@ footer {
   text-align: center;
 }
 
-#contactImg {
-  height: 15rem;
-  width: 15rem;
-  margin: 5rem 0rem;
+figure {
+  text-align: center;
 }
+
 
 #giphy-img {
   height: 3rem;
@@ -155,7 +153,6 @@ footer {
 }
 
 .about {
-
   text-align: center;
 }
 
@@ -310,15 +307,15 @@ fieldset label {
   }
 
   #aboutImg {
-    height: 10rem;
+
     width: 10rem;
     border-style: double;
     border-color: #888888;
     background: white;
     border-radius: 50%;
-    margin: 1rem -1rem;
-    text-align: center;
   }
+
+
 
   #aboutInfo {
     padding: 0.25rem;
